Name the Fearless version once, and let one builder make both app images
The manager needs two folder names at runtime (the folder holding the code,
and the folder holding what it writes) and the deploy needs the first of them
to name what it produces. FearlessId is the single place they come from, so
neither side has to be told what the other chose, and two versions never meet.

PortableApp gains appName and moduleMain: the two deploys are the same app
image and differ only in the name of the produced folder and in which main the
launchers start. The 10 argument constructor still builds the portable one
(packaging folder names it, Coordinator is its main), so DeployPortableFearless
is unchanged. JavacTool.jpackage takes the name instead of always reading it
back from the packaging folder, and getName becomes public for the caller that
still wants that name.

Two fixes that fall out of this:
- the Linux mime file was written to a hardcoded "fearless" path under out,
  which was only right for the portable name;
- javaOptions grants --enable-native-access to the module that makes the
  restricted calls (the manager forces the process locale through the JDK
  foreign-function API), which the JVM reports today and plans to refuse.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>